# chaski-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.mjs  vite.config.ts
src/: main.css  (+7 more)
src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-09-13-190403_create_feeds/: up.sql
src-tauri/migrations/2024-09-13-190516_create_articles/: up.sql
src-tauri/migrations/2024-09-13-190521_create_tags/: up.sql
src-tauri/migrations/2024-09-13-190533_create_article_tags/: up.sql
src-tauri/migrations/2024-09-13-190547_create_changes/: up.sql
src-tauri/migrations/2024-10-22-160625_create_fts_tables_for_feeds_and_articles/: down.sql  up.sql
src-tauri/migrations/2024-10-22-161414_create_triggers_for_populate_fts_tables/: down.sql  up.sql
src-tauri/migrations/2024-10-28-223935_create_filters_table/: up.sql
src-tauri/migrations/2024-11-24-184519_create_configurations_table/: up.sql
src-tauri/migrations/2024-11-25-142028_add_pragmas/: up.sql
src-tauri/migrations/2025-01-23-202026_create_accounts_table/: up.sql
src-tauri/migrations/2025-01-23-202129_add_account_id_to_feeds/: down.sql  up.sql
src-tauri/migrations/2025-02-01-225702_add_external_ids_to_feeds_and_articles/: down.sql  up.sql
src-tauri/migrations/2025-02-14-195956_add_content_type_to_feeds_and_articles/: down.sql  up.sql
src-tauri/migrations/2025-02-23-204737_add_media_to_articles/: down.sql  up.sql
src-tauri/migrations/2025-03-08-113114_add_chaski_blog_rss/: down.sql  up.sql
src-tauri/migrations/2026-07-20-000001_add_article_scrape_mode_configuration/: down.sql  up.sql
src-tauri/migrations/2026-07-20-000002_rename_articles_to_entries/: down.sql  up.sql
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs
(+102 files in other folders)
