[package]
name = "chaski"
version = "0.3.1"
description = "A beautifully designed, privacy-focused feed reader that keeps you updated."
authors = ["a-chacon"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
diesel = { version = "2.2.0", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
  "chrono",
] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.7", default-features = false, features = [
  "json",
  "rustls-tls",
] }
atom_syndication = "0.12.4"
rss = "2.0.9"
scraper = "0.20.0"
tokio = { version = "1.41.1", features = ["full"] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-notification = "2"
env_logger = "0.11.5"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2.0.1"
opml = "1.1.6"
tauri-plugin-log = "2"
log = "0.4.22"
regex = "1.11.1"
readability-rs = "0.5.0"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
urlencoding = "2.1"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
